# sns_autocalibration

./: .gitignore  404.html  README.md  index.html  pyproject.toml  requirements.txt
data/best_trial/: waterlevels.dfs0
data/input/: ManningM.dfsu  Mesh_8000_elems_HD_v2.mesh
data/model/: DWF_HD_Setup.m21fm  SNS_Autocal.m21fm
data/observations/: Altimetry_wl_3a.csv  Altimetry_wl_3a.dfs0  Altimetry_wl_3b.csv  Altimetry_wl_3b.dfs0  Altimetry_wl_6a.csv  Altimetry_wl_6a.dfs0  Altimetry_wl_c2.csv  Altimetry_wl_j3.csv  Altimetry_wl_j3.dfs0  Altimetry_wl_sa.csv  Altimetry_wl_sa.dfs0  Cromer_wl.csv  DDW1A_wl.csv  Dover_wl.csv  IJVA_wl.csv  Lowestoft_wl.csv  MO_NN_u_v.csv  NWA_wl.csv  Q11_wl.csv  current_stations.csv  stations.csv
getting_started/: index.html
notebooks/: 1-overview.ipynb  2-calibration.ipynb  3-analysis.ipynb  SNS-Autocalibration.db  SNS-Autocalibration_example.db  helpers.py
reference/: index.html
tests/: test_basic.py
