[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/sns_autocalibration")
# note: the package name 'sns_autocalibration' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["sns_autocalibration"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install sns_autocalibration)
name = "sns_autocalibration"
version = "0.0.1"
dependencies = [
    "modelskill==1.0.0",
    "optuna==4.2.1",
    "ipykernel",
    "jupyterlab==4.4.4",
    "mikeio==2.6.0",
    "torch==2.7.1",
    "cartopy==0.24.1",
    "plotly==6.2.0",
    "scikit-learn==1.7.0",
]

authors = [
  { name="Faro Schäfer", email="fsch@dhigroup.com" },
]
description = "A python repository that showcases an approach to automatically calibrate a DHI waterbench model."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/sns_autocalibration"
"Bug Tracker" = "https://github.com/DHI/sns_autocalibration/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
